              calling tri = iso(tri).
            - Added bracket operators to apply an isomorphism to a
              FacetSpec or a FacetPairing.
            - Added pre/postincrement operators for iterating through
              all permutations of a given size.
        Class LargeInteger:
            - New tightDecode() routines.
        Class Matrix:
            - Routine det() now throws an exception if the matrix is not
              square (this is a precondition), and now returns 1 if the
              matrix is detected to be 0-by-0 (although such matrices are
              formally not supported by the Matrix class).
            - You can now multiply a matrix over type T with a matrix or vector
              over type U, where T and U are different types.
        Class NormalHypersurface:
            - New operators * and *= for taking integer multiples.  The old
              doubleHypersurface() is now deprecated.
            - New routine scaleDown().
        Class NormalSurface:
            - New operators * and *= for taking integer multiples.  The old
              doubleSurface() is now deprecated.
            - New routine scaleDown().
            - New routine isNormalEdgeLink().
        Class Perm<n>:
            - Added tightEncode(), tightEncoding() and tightDecode().
        Type safe_tuple_element<...>:
            - New type alias that is like std::tuple_element<...> but
              with well-defined behaviour for an out-of-range index.
        Class Triangulation<dim>:
            - New suite of routines countBoundaryFaces().
            - New suite of public routines dualBoundaryMap() (these were
              previously private, and had a more complex interface).
            - New suite of routines dualToPrimal().
            - New routine pairing().
        Class Triangulation<4>:
            - New routine intersectionForm().
            - New optimisations that reduce the need for 3-sphere/3-ball